--- a/README
+++ b/README
@@ -1,9 +1,12 @@
-We are using a Python library that makes accessing Steam API calls easier, just like Tweepy does for twitter.
+We are using a Python library that makes accessing Steam API calls easier, just like Tweepy does for Twitter.
 	This needs to be installed for our code to run: https://github.com/Lagg/steamodd
 
-Our API key is removed (because of the nature of GitHub), so it will not run as-is.
-We can provide the API key if needed.
+Our API key is removed (because the repository is public), so it will not run as-is.
+We can provide an API key if needed.
 
-Then just run recommender.py.  It will print out the top 10 games.  
+When you have a key, add it in line 206 of recommender.py and run it:
+	python recommender.py
+
+Right now it has a super small dataset, and will print out the top 10 games.  
 
 A sample run can be seen in "output.txt"
